--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,10 +4,15 @@
 }
 
 .maxWidthWrapper {
+  isolation: isolate;
+  max-width: 1024px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header {
   padding-bottom: 64px;
+  max-width: 65%;
 }
 
 .title {
@@ -24,7 +29,13 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 200px;
+  right: 100px;
+  min-height: 500px;
+  width: 350px;
 }
 
 .controlColumn {
+  max-width: 50%;
 }
