--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,5 +1,10 @@
 .buttonRow {
-  padding-bottom: 16px;
   white-space: nowrap;
   overflow-x: auto;
+  margin-left: -22px;
+  margin-right: -22px;
+  margin-bottom: -22px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 24px;
 }
